removed UploadEntity